User model + authentication

--- a/dogs/templates/dogs/base.html
+++ b/dogs/templates/dogs/base.html
@@ -189,9 +189,11 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Питомник</h1>
                 <p class="lead text-body-secondary">"Питерский ишак"</p>
+                {% if user.is_authenticated %}
                 <p>
                     <a class="btn btn-success" href="{% url 'dogs:dogs_create' %}" role="button">Добавить питомца</a>
                 </p>
+                {% endif %}
             </div>
         </div>
     </section>
